testsuite/tests/ghc-regress/mdo/should_fail/mdofail005.stderr

mdofail005.hs:11:13: parse error on input `<-'
